--- a/TaskManager/appsettings.json
+++ b/TaskManager/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=MAYOORAN-UNICOM;Initial Catalog=TaskManager2;Integrated Security=True;Encrypt=False"
+  },
+  "Jwt": {
+    "Issuer": "TIC",
+    "Audience": "Students",
+    "Key": "BHVYGVUNJIGTBJHBTFRTVUHBHBIUYFYTTFVGBINIUBYUV"
   }
 }
